--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link rel="stylesheet"
+          href="{{ url_for('static', filename='semantic-superhero.css') }}">
+    <link rel="stylesheet"
+          href="{{ url_for('static', filename='custom-style.css') }}">
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="{{ url_for('static', filename='semantic.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='jquery.tablesort.js') }}"></script>
+    <script src="{{ url_for('static', filename='custom-script.js') }}"></script>
     <title>Clanner</title>
 </head>
 <body>
