--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,14 @@
     <tbody>
     {% for player in players %}
     <tr>
-        <td>{{player.player.name}}</td>
+        <td data-sort-value="{{player.player.name|upper}}">
+            {% if player.role in ['Leader','Co-Leader','Elder'] %}
+                <i class="{{ 'empty' if player.role == 'Elder' }} star icon"></i>
+            {% else %}
+                <i class="icon"></i>
+            {% endif %}
+            {{player.player.name}}
+        </td>
         {% for week in timetable %}
         {% if data[player.player.usertag][week] and (data[player.player.usertag][week].crowns) %}
             <td data-sort-value="{{ "%03d"|format(data[player.player.usertag][week].crowns) }}">
@@ -21,8 +28,10 @@
             <td data-sort-value="000">
         {% endif %}
             {% if (data[player.player.usertag][week]) %}
-                <i class="empty star icon"></i>{{ data[player.player.usertag][week].crowns or '-' }}
-                (<i class="gift icon"></i>{{ data[player.player.usertag][week].donations or '-' }})
+                {{ data[player.player.usertag][week].crowns or '-' }}
+                <span style="opacity: 0.4;">
+                    (<i class="gift icon"></i>{{ data[player.player.usertag][week].donations or '-' }})
+                </span>
             {% endif %}
         </td>
         {% endfor %}
